# ml-from-first

./: .gitignore  README.md  pyproject.toml
assets/: attention.pth
src/bayes/: bayes_regression.py
src/core/: base.py  metrics.py  optimizers.py  utils.py
src/linear/: __init__.py  linear_regression.py  svms.py
src/neural-nets/: gpt.ipynb
tests/: linear.py
tests/linear/: linear.py  linear_regression.py
